--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } 
-/* 
-*{
+ 
+/* *{
   margin: 0;
   padding: 10px;
   box-sizing: border-box;
-} */
+}  */
